namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: development
  labels:
    project: mtap
    environment: dev
    name: development
