service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtap-service
  namespace: development
  labels:
    app: mtap-dev
spec:
  selector:
    app: mtap-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
