ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtap-ingress
  namespace: development
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:REGION:ACCOUNT_ID:certificate/CERTIFICATE_ID
spec:
  ingressClassName: alb
  rules:
  # HTTP Rule to redirect to HTTPS
  - host: test.byklabs.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redirect-to-https
            port:
              number: 80

  # HTTPS Rule for Routing to the Service
  - host: test.byklabs.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mtap-service
            port:
              number: 80
